[package]
name = "local-wasm-pack"
version = "0.1.0"
authors = ["Adam Perry <lol@anp.lol>"]
edition = "2018"
publish = false
description = "uses wasm-pack as a library to have cargo install it for us"

[[bin]]
path = "wasm-pack.rs"
name = "wasm-pack"

[dependencies]
# Force old wasm-pack's native-tls stack to use vendored OpenSSL on CI hosts.
openssl = { version = "0.10.26", features = ["vendored"] }
pretty_env_logger = "0.3"
structopt = "0.2"

[dependencies.wasm-pack]
version = "0.9.1"
# TODO https://github.com/rustwasm/wasm-pack/issues/954 go back to upstream
git = "https://github.com/anp/wasm-pack.git"
branch = "apple-silicon-rosetta"

[workspace]
